// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Dynamic Page Collapsed Header (mobile) 1`] = `
<div
  class="mobile-container"
>


  <section
    aria-label="Dynamic Page Mobile Collapsed Example"
    class="fd-dynamic-page"
  >


    <header
      class="fd-dynamic-page__header"
    >


      <div
        class="fd-dynamic-page__title-area fd-dynamic-page__title-area--sm fd-dynamic-page__title-area--collapsed"
        tabindex="0"
      >


        <div
          class="fd-dynamic-page__main-container"
        >


          <div
            class="fd-dynamic-page__breadcrumb-title-container"
          >


            <div
              class="fd-dynamic-page__breadcrumb-container"
            >


              <nav
                aria-label="Breadcrumbs"
              >


                <ul
                  class="fd-dynamic-page__breadcrumb--sm fd-breadcrumb"
                >


                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Men
                    </a>
                  </li>


                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Shoes
                    </a>
                  </li>


                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      aria-current="page"
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Running Shoes
                    </a>
                  </li>


                </ul>


              </nav>


              <div
                aria-label="Close action"
                class="fd-dynamic-page__toolbar-actions fd-dynamic-page__toolbar-actions--sm fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--decline"
                  />


                </button>


              </div>


            </div>


            <div
              class="fd-dynamic-page__title-container"
            >


              <h1
                class="fd-title fd-dynamic-page__title"
                title="Balenciaga Triple S Trainers"
              >
                 Balenciaga Triple S Trainers
              </h1>


              <div
                aria-label="Header Content"
                class="fd-dynamic-page__title-content-toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <div
                  class="fd-popover fd-toolbar__overflow"
                >


                  <div
                    class="fd-popover__control"
                  >


                    <button
                      aria-controls="wgxzK85913"
                      aria-expanded="true"
                      aria-haspopup="true"
                      aria-label="More Header Content"
                      class="fd-button fd-button--transparent"
                      id="ko9as8dajskdj"
                      onclick="
                                                    toggleElAttrs('wgxzK85913', ['aria-hidden']);
                                                    toggleElAttrs('ko9as8dajskdj', ['aria-expanded']);
                                                "
                    >


                      <i
                        class="sap-icon--overflow"
                      />


                    </button>


                  </div>


                  <div
                    aria-hidden="false"
                    class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                    id="wgxzK85913"
                  >


                    <div
                      class="fd-toolbar__overflow__body"
                    >

                                                Overflowing title content

                    </div>


                  </div>


                </div>


              </div>


              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar--sm fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <div
                  class="fd-popover fd-toolbar__overflow"
                >


                  <div
                    class="fd-popover__control"
                  >


                    <button
                      aria-controls="wgxzK85912"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="Header actions"
                      class="fd-button fd-button--transparent"
                      id="k9r0a8ioasjd"
                      onclick="
                                                    toggleElAttrs('wgxzK85912', ['aria-hidden']);
                                                    toggleElAttrs('k9r0a8ioasjd', ['aria-expanded']);
                                                "
                    >


                      <i
                        class="sap-icon--overflow"
                      />


                    </button>


                  </div>


                  <div
                    aria-hidden="false"
                    class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                    id="wgxzK85912"
                  >


                    <div
                      class="fd-toolbar__overflow__body"
                    >


                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Accept
                      </button>


                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Reject
                      </button>


                    </div>


                  </div>


                </div>


              </div>


            </div>


          </div>


        </div>


        <div
          class="fd-dynamic-page__subtitle"
        >
           Collapsed header
        </div>


      </div>


      <div
        class="fd-dynamic-page__collapsible-header-container"
      >


        <div
          aria-hidden="true"
          aria-label="Dynamic Page Mobile Collapsed Header"
          class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--sm"
          id="fddplhvcm1"
          role="region"
        >

                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                        delectus necessitatibus incidunt numquam asperiores tenetur iure.
                        Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

        </div>


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container fd-dynamic-page__collapsible-header-visibility-container--no-shadow"
        >


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
          />


          <div
            aria-label="Header actions"
            class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
            role="toolbar"
          >


            <button
              aria-controls="fddplhvcm1"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="See More"
              class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
            >


              <i
                class="sap-icon--slim-arrow-down"
              />


            </button>


          </div>


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
          />


        </div>


      </div>


      <div
        class="fd-dynamic-page__tabs--overflow"
      >


        <ul
          class="fd-tabs fd-tabs--l fd-dynamic-page__tabs fd-dynamic-page__tabs--sm fd-dynamic-page__tabs--add-shadow"
          role="tablist"
        >


          <li
            class="fd-tabs__item"
            role="tab"
          >


            <button
              aria-controls="fuCwV553"
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                    Link

              </span>


            </button>


          </li>


          <li
            aria-selected="true"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              aria-controls="AiWfz168"
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                    Selected

              </span>


            </button>


          </li>


        </ul>


      </div>


    </header>


    <div
      class="fd-dynamic-page__content fd-dynamic-page__content--sm"
    >


      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="fuCwV553"
        role="tabpanel"
      >

                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
                    eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
                    dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

      </div>


      <div
        aria-expanded="true"
        class="fd-tabs__panel"
        id="AiWfz168"
        role="tabpanel"
      >

                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.

      </div>


    </div>


    <footer
      class="fd-bar fd-bar--floating-footer"
      style="position:relative"
    >


      <div
        aria-label="Finalizing actions"
        class="fd-bar__right"
        role="toolbar"
      >


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>


        </div>


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>


        </div>


      </div>


    </footer>


  </section>


</div>
`;

exports[`Storyshots Layouts/Dynamic Page Collapsed Header 1`] = `
<section
  aria-label="Dynamic Page Collapsed Example"
  class="fd-dynamic-page"
>


  <header
    class="fd-dynamic-page__header"
  >


    <div
      class="fd-dynamic-page__title-area fd-dynamic-page__title-area--xl fd-dynamic-page__title-area--collapsed"
      tabindex="0"
    >


      <div
        class="fd-dynamic-page__main-container"
      >


        <div
          class="fd-dynamic-page__breadcrumb-title-container"
        >


          <nav
            aria-label="Breadcrumbs"
          >


            <ul
              class="fd-dynamic-page__breadcrumb fd-breadcrumb"
            >


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Men
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Shoes
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  aria-current="page"
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Running Shoes
                </a>
              </li>


            </ul>


          </nav>


          <div
            class="fd-dynamic-page__title-container"
          >


            <h1
              class="fd-title fd-dynamic-page__title"
              title="Balenciaga Triple S Trainers Model 123456AB On Sale"
            >
               Balenciaga Triple S Trainers Model 123456AB On Sale
            </h1>


            <div
              class="fd-dynamic-page__title-content"
              title="Collapsed Header with both expand and pin buttons"
            >
              Collapsed Header with both expand and pin buttons
            </div>


          </div>


        </div>


        <div
          class="fd-dynamic-page__actions-container"
        >


          <div
            class="fd-dynamic-page__toolbar-container"
          >


            <div
              aria-label="Product actions"
              class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
              role="toolbar"
            >


              <button
                class="fd-button fd-button--compact fd-button--positive"
              >
                Accept
              </button>


              <button
                class="fd-button fd-button--compact fd-button--reject"
              >
                Reject
              </button>


              <span
                class="fd-toolbar__separator"
              />


            </div>


            <div
              aria-label="Navigation actions"
              class="fd-dynamic-page__toolbar-actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
              role="toolbar"
            >


              <button
                aria-label="Resize"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--resize"
                />


              </button>


              <button
                aria-label="Exit fullscreen"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--exitfullscreen"
                />


              </button>


              <button
                aria-label="Close"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--decline"
                />


              </button>


            </div>


          </div>


        </div>


      </div>


      <div
        class="fd-dynamic-page__subtitle"
      >
         Oversized multimaterial sneakers with quilted effect
      </div>


    </div>


    <div
      class="fd-dynamic-page__collapsible-header-container"
    >


      <div
        aria-hidden="true"
        aria-label="Collapsed header"
        class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--xl"
        id="fddplhvc2"
        role="region"
      >

                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                    delectus necessitatibus incidunt numquam asperiores tenetur iure.
                    Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

      </div>


      <div
        class="fd-dynamic-page__collapsible-header-visibility-container"
      >


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
        />


        <div
          aria-label="Header actions"
          class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
          role="toolbar"
        >


          <button
            aria-controls="fddplhvc2"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="See More"
            class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
          >


            <i
              class="sap-icon--slim-arrow-down"
            />


          </button>


          <button
            aria-label="Pin this"
            class="fd-dynamic-page__pin-button fd-button fd-button--compact"
          >


            <i
              class="sap-icon--pushpin-off"
            />


          </button>


        </div>


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
        />


      </div>


    </div>


  </header>


  <div
    class="fd-dynamic-page__content fd-dynamic-page__content--xl"
  >

            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
            eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
            dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

  </div>


</section>
`;

exports[`Storyshots Layouts/Dynamic Page Desktop 1`] = `
<section>


  <section
    aria-label="Dynamic Page Desktop Example"
    class="fd-dynamic-page"
  >


    <header
      class="fd-dynamic-page__header"
    >


      <div
        class="fd-dynamic-page__title-area fd-dynamic-page__title-area--xl"
        tabindex="0"
      >


        <div
          class="fd-dynamic-page__main-container"
        >


          <div
            class="fd-dynamic-page__breadcrumb-title-container"
          >


            <nav
              aria-label="Breadcrumbs"
            >


              <ul
                class="fd-dynamic-page__breadcrumb fd-breadcrumb"
              >


                <li
                  class="fd-breadcrumb__item"
                >
                  <a
                    class="fd-breadcrumb__link"
                    href="#"
                    tabindex="0"
                  >
                    Men
                  </a>
                </li>


                <li
                  class="fd-breadcrumb__item"
                >
                  <a
                    class="fd-breadcrumb__link"
                    href="#"
                    tabindex="0"
                  >
                    Shoes
                  </a>
                </li>


                <li
                  class="fd-breadcrumb__item"
                >
                  <a
                    aria-current="page"
                    class="fd-breadcrumb__link"
                    href="#"
                    tabindex="0"
                  >
                    Running Shoes
                  </a>
                </li>


              </ul>


            </nav>


            <div
              class="fd-dynamic-page__title-container"
            >


              <h1
                class="fd-title fd-dynamic-page__title"
                title="Balenciaga Triple S Trainers"
              >
                 Balenciaga Triple S Trainers
              </h1>


              <div
                class="fd-dynamic-page__title-content"
                title="Some RANDOM things"
              >
                 Some RANDOM things
              </div>


            </div>


          </div>


          <div
            class="fd-dynamic-page__actions-container"
          >


            <div
              class="fd-dynamic-page__toolbar-container"
            >


              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <button
                  class="fd-button fd-button--compact fd-button--positive"
                >
                  Accept
                </button>


                <button
                  class="fd-button fd-button--compact fd-button--reject"
                >
                  Reject
                </button>


                <span
                  class="fd-toolbar__separator"
                />


              </div>


              <div
                aria-label="Navigation actions"
                class="fd-dynamic-page__toolbar-actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <button
                  aria-label="Resize"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--resize"
                  />


                </button>


                <button
                  aria-label="Exit fullscreen"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--exitfullscreen"
                  />


                </button>


                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--decline"
                  />


                </button>


              </div>


            </div>


          </div>


        </div>


        <div
          class="fd-dynamic-page__subtitle"
        >
           Oversized multimaterial sneakers with quilted effect
        </div>


      </div>


      <div
        class="fd-dynamic-page__collapsible-header-container"
      >


        <div
          aria-label="Dynamic Page Desktop Header"
          class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--xl"
          id="fddplhvc6"
          role="region"
        >

                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                    delectus necessitatibus incidunt numquam asperiores tenetur iure.
                    Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

        </div>


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container fd-dynamic-page__collapsible-header-visibility-container--no-shadow"
        >


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
          />


          <div
            aria-label="Header actions"
            class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
            role="toolbar"
          >


            <button
              aria-controls="fddplhvc6"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="See More"
              class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
            >


              <i
                class="sap-icon--slim-arrow-up"
              />


            </button>


            <button
              aria-label="Pin this"
              class="fd-dynamic-page__pin-button fd-button fd-button--compact"
            >


              <i
                class="sap-icon--pushpin-off"
              />


            </button>


          </div>


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
          />


        </div>


      </div>


      <div
        class="fd-dynamic-page__tabs--overflow"
      >


        <ul
          class="fd-tabs fd-tabs--l fd-dynamic-page__tabs fd-dynamic-page__tabs--xl fd-dynamic-page__tabs--add-shadow"
          role="tablist"
        >


          <li
            aria-controls="fuCwV550"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                Link

              </span>


            </button>


          </li>


          <li
            aria-controls="AiWfz165"
            aria-selected="true"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                Selected

              </span>


            </button>


          </li>


        </ul>


      </div>


    </header>


    <div
      class="fd-dynamic-page__content fd-dynamic-page__content--xl"
    >


      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="fuCwV550"
        role="tabpanel"
      >

                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
                eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
                dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

      </div>


      <div
        aria-expanded="true"
        class="fd-tabs__panel"
        id="AiWfz165"
        role="tabpanel"
      >

                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.

      </div>


    </div>


    <footer
      class="fd-bar fd-bar--floating-footer"
      style="position:relative"
    >


      <div
        aria-label="Finalizing actions"
        class="fd-bar__right"
        role="toolbar"
      >


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>


        </div>


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>


        </div>


      </div>


    </footer>


  </section>


  <br />
  <br />


</section>
`;

exports[`Storyshots Layouts/Dynamic Page Expanded Header 1`] = `
<section
  aria-label="Dynamic Page Expandable Example"
  class="fd-dynamic-page"
>


  <header
    class="fd-dynamic-page__header"
  >


    <div
      class="fd-dynamic-page__title-area fd-dynamic-page__title-area--xl"
      tabindex="0"
    >


      <div
        class="fd-dynamic-page__main-container"
      >


        <div
          class="fd-dynamic-page__breadcrumb-title-container"
        >


          <nav
            aria-label="Breadcrumbs"
          >


            <ul
              class="fd-dynamic-page__breadcrumb fd-breadcrumb"
            >


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Men
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Shoes
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  aria-current="page"
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Running Shoes
                </a>
              </li>


            </ul>


          </nav>


          <div
            class="fd-dynamic-page__title-container"
          >


            <h1
              class="fd-title fd-dynamic-page__title"
              title="Balenciaga Triple S Trainers"
            >
               Balenciaga Triple S Trainers
            </h1>


            <div
              class="fd-dynamic-page__title-content"
              title="Header with both collapse and pin buttons, expanded by default"
            >
               Header with both collapse and pin buttons, expanded by default
            </div>


          </div>


        </div>


        <div
          class="fd-dynamic-page__actions-container"
        >


          <div
            class="fd-dynamic-page__toolbar-container"
          >


            <div
              aria-label="Product actions"
              class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
              role="toolbar"
            >


              <button
                class="fd-button fd-button--compact fd-button--positive"
              >
                Accept
              </button>


              <button
                class="fd-button fd-button--compact fd-button--reject"
              >
                Reject
              </button>


              <span
                class="fd-toolbar__separator"
              />


            </div>


            <div
              aria-label="Navigation actions"
              class="fd-dynamic-page__toolbar-actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
              role="toolbar"
            >


              <button
                aria-label="Resize"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--resize"
                />


              </button>


              <button
                aria-label="Exit fullscreen"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--exitfullscreen"
                />


              </button>


              <button
                aria-label="Close"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--decline"
                />


              </button>


            </div>


          </div>


        </div>


      </div>


      <div
        class="fd-dynamic-page__subtitle"
      >
         Oversized multimaterial sneakers with quilted effect
      </div>


    </div>


    <div
      class="fd-dynamic-page__collapsible-header-container"
    >


      <div
        aria-hidden="false"
        aria-label="Default expanded header"
        class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--xl"
        id="fddplhvc1"
        role="region"
      >

                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                    delectus necessitatibus incidunt numquam asperiores tenetur iure.
                    Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

      </div>


      <div
        class="fd-dynamic-page__collapsible-header-visibility-container"
      >


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
        />


        <div
          aria-label="Header actions"
          class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
          role="toolbar"
        >


          <button
            aria-controls="fddplhvc1"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="See More"
            class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
          >


            <i
              class="sap-icon--slim-arrow-up"
            />


          </button>


          <button
            aria-label="Pin this"
            class="fd-dynamic-page__pin-button fd-button fd-button--compact"
          >


            <i
              class="sap-icon--pushpin-off"
            />


          </button>


        </div>


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
        />


      </div>


    </div>


  </header>


  <div
    class="fd-dynamic-page__content fd-dynamic-page__content--xl"
  >

            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
            eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
            dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

  </div>


</section>
`;

exports[`Storyshots Layouts/Dynamic Page Mobile 1`] = `
<div
  class="mobile-container"
>


  <section
    aria-label="Dynamic Page Mobile Example"
    class="fd-dynamic-page"
  >


    <header
      class="fd-dynamic-page__header"
    >


      <div
        class="fd-dynamic-page__title-area fd-dynamic-page__title-area--sm"
        tabindex="0"
      >


        <div
          class="fd-dynamic-page__main-container"
        >


          <div
            class="fd-dynamic-page__breadcrumb-title-container"
          >


            <div
              class="fd-dynamic-page__breadcrumb-container"
            >


              <nav
                aria-label="Breadcrumbs"
              >


                <ul
                  class="fd-dynamic-page__breadcrumb--sm fd-breadcrumb"
                >


                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Men
                    </a>
                  </li>


                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Shoes
                    </a>
                  </li>


                  <li
                    class="fd-breadcrumb__item"
                  >
                    <a
                      aria-current="page"
                      class="fd-breadcrumb__link"
                      href="#"
                      tabindex="0"
                    >
                      Running Shoes
                    </a>
                  </li>


                </ul>


              </nav>


              <div
                aria-label="Close action"
                class="fd-dynamic-page__toolbar-actions fd-dynamic-page__toolbar-actions--sm fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--decline"
                  />


                </button>


              </div>


            </div>


            <div
              class="fd-dynamic-page__title-container"
            >


              <h1
                class="fd-title fd-dynamic-page__title"
                title="Balenciaga Triple S Trainers"
              >
                 Balenciaga Triple S Trainers
              </h1>


              <div
                aria-label="Header Content"
                class="fd-dynamic-page__title-content-toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <div
                  class="fd-popover fd-toolbar__overflow"
                >


                  <div
                    class="fd-popover__control"
                  >


                    <button
                      aria-controls="wgxzK85915"
                      aria-expanded="true"
                      aria-haspopup="true"
                      aria-label="More Header Content"
                      class="fd-button fd-button--transparent"
                      id="asfmiasudashd"
                      onclick="
                                                    toggleElAttrs('wgxzK85915', ['aria-hidden']);
                                                    toggleElAttrs('asfmiasudashd', ['aria-expanded']);
                                                "
                    >


                      <i
                        class="sap-icon--overflow"
                      />


                    </button>


                  </div>


                  <div
                    aria-hidden="false"
                    class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                    id="wgxzK85915"
                  >


                    <div
                      class="fd-toolbar__overflow__body"
                    >

                                                Overflowing title content

                    </div>


                  </div>


                </div>


              </div>


              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar--sm fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <div
                  class="fd-popover fd-toolbar__overflow"
                >


                  <div
                    class="fd-popover__control"
                  >


                    <button
                      aria-controls="wgxzK85914"
                      aria-expanded="true"
                      aria-haspopup="true"
                      aria-label="Header actions"
                      class="fd-button fd-button--transparent"
                      id="maisodusakdnsma"
                      onclick="
                                                    toggleElAttrs('wgxzK85914', ['aria-hidden']);
                                                    toggleElAttrs('maisodusakdnsma', ['aria-expanded']);
                                                "
                    >


                      <i
                        class="sap-icon--overflow"
                      />


                    </button>


                  </div>


                  <div
                    aria-hidden="false"
                    class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                    id="wgxzK85914"
                  >


                    <div
                      class="fd-toolbar__overflow__body"
                    >


                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Accept
                      </button>


                      <button
                        class="fd-button fd-button--transparent"
                      >
                        Reject
                      </button>


                    </div>


                  </div>


                </div>


              </div>


            </div>


          </div>


        </div>


        <div
          class="fd-dynamic-page__subtitle"
        >
           Expanded header in mobile
        </div>


      </div>


      <div
        class="fd-dynamic-page__collapsible-header-container"
      >


        <div
          aria-label="Dynamic Page Mobile Header"
          class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--sm"
          id="fddplhvc4"
          role="region"
        >

                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                        delectus necessitatibus incidunt numquam asperiores tenetur iure.
                        Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

        </div>


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container fd-dynamic-page__collapsible-header-visibility-container--no-shadow"
        >


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
          />


          <div
            aria-label="Header actions"
            class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
            role="toolbar"
          >


            <button
              aria-controls="fddplhvc4"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="See More"
              class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
            >


              <i
                class="sap-icon--slim-arrow-up"
              />


            </button>


          </div>


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
          />


        </div>


      </div>


      <div
        class="fd-dynamic-page__tabs--overflow"
      >


        <ul
          class="fd-tabs fd-tabs--l fd-dynamic-page__tabs fd-dynamic-page__tabs--sm fd-dynamic-page__tabs--add-shadow"
          role="tablist"
        >


          <li
            aria-controls="fuCwV552"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                    Link

              </span>


            </button>


          </li>


          <li
            aria-controls="AiWfz167"
            aria-selected="true"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                    Selected

              </span>


            </button>


          </li>


        </ul>


      </div>


    </header>


    <div
      class="fd-dynamic-page__content fd-dynamic-page__content--sm"
    >


      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="fuCwV552"
        role="tabpanel"
      >

                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
                    eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
                    dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

      </div>


      <div
        aria-expanded="true"
        class="fd-tabs__panel"
        id="AiWfz167"
        role="tabpanel"
      >

                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.

      </div>


    </div>


    <footer
      class="fd-bar fd-bar--floating-footer"
      style="position:relative"
    >


      <div
        aria-label="Finalizing actions"
        class="fd-bar__right"
        role="toolbar"
      >


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>


        </div>


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>


        </div>


      </div>


    </footer>


  </section>


</div>
`;

exports[`Storyshots Layouts/Dynamic Page Summary Line (mobile) 1`] = `
<div
  class="mobile-container"
>


  <section
    aria-label="Dynamic Page Mobile Summary Line Example"
    class="fd-dynamic-page"
  >


    <header
      class="fd-dynamic-page__header"
    >


      <div
        class="fd-dynamic-page__summarized-title-area fd-dynamic-page__summarized-title-area--sm fd-dynamic-page__summarized-title-area--no-shadow"
        tabindex="0"
      >


        <h1
          class="fd-dynamic-page__summarized-title fd-dynamic-page__summarized-title--collapsed"
          title="Balenciaga Triple S Trainers"
        >
           Balenciaga Triple S Trainers
        </h1>


        <div
          aria-label="Expand summary line action"
          class="fd-dynamic-page__toolbar-actions  fd-dynamic-page__toolbar-actions--sm fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
          role="toolbar"
        >


          <button
            aria-label="Expand"
            class="fd-button fd-button--transparent"
          >


            <i
              class="sap-icon--slim-arrow-down"
            />


          </button>


        </div>


      </div>


      <div
        aria-hidden="true"
        class="fd-dynamic-page__title-area fd-dynamic-page__title-area--sm fd-dynamic-page__title-area--collapsed"
      >


        <div
          class="fd-dynamic-page__breadcrumb-title-container"
        >


          <nav
            aria-label="Breadcrumbs"
          >


            <ul
              class="fd-dynamic-page__breadcrumb--sm fd-breadcrumb"
            >


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="-1"
                >
                  Men
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="-1"
                >
                  Shoes
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  aria-current="page"
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="-1"
                >
                  Running Shoes
                </a>
              </li>


            </ul>


          </nav>


          <div
            aria-label="Close action"
            class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar-actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
            role="toolbar"
          >


            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
              tabindex="-1"
            >


              <i
                class="sap-icon--decline"
              />


            </button>


          </div>


        </div>


        <div
          class="fd-dynamic-page__title-container"
        >


          <h1
            class="fd-title fd-dynamic-page__title"
            title="Balenciaga Triple S Trainers"
          >
             Balenciaga Triple S Trainers
          </h1>


          <div
            aria-label="Product actions"
            class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar-actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
            role="toolbar"
          >


            <button
              aria-label="More Header Content"
              class="fd-button fd-button--transparent"
              tabindex="-1"
            >


              <i
                class="sap-icon--overflow"
              />


            </button>


            <button
              aria-label="Header actions"
              class="fd-button fd-button--transparent"
              tabindex="-1"
            >


              <i
                class="sap-icon--overflow"
              />


            </button>


          </div>


        </div>


        <div
          class="fd-dynamic-page__subtitle"
        >
           Collapsed title area and header with summary line
        </div>


      </div>


      <div
        class="fd-dynamic-page__collapsible-header-container"
      >


        <div
          aria-hidden="true"
          aria-label="Dynamic Page Mobile Collapsed Header"
          class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--sm"
          id="fddplhvcm2"
          role="region"
        >

                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                        delectus necessitatibus incidunt numquam asperiores tenetur iure.
                        Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

        </div>


        <div
          aria-hidden="true"
          class="fd-dynamic-page__collapsible-header-visibility-container fd-dynamic-page__collapsible-header-visibility-container--no-shadow"
        >


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
          />


          <div
            aria-label="Header actions"
            class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
            role="toolbar"
          >


            <button
              aria-controls="fddplhvcm2"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="See More"
              class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
              tabindex="-1"
            >


              <i
                class="sap-icon--slim-arrow-down"
              />


            </button>


          </div>


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
          />


        </div>


      </div>


      <div
        class="fd-dynamic-page__tabs--overflow"
      >


        <ul
          class="fd-tabs fd-tabs--l fd-dynamic-page__tabs fd-dynamic-page__tabs--sm fd-dynamic-page__tabs--add-shadow"
          role="tablist"
        >


          <li
            aria-controls="fuCwV554"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                    Link

              </span>


            </button>


          </li>


          <li
            aria-controls="AiWfz169"
            aria-selected="true"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                    Selected

              </span>


            </button>


          </li>


        </ul>


      </div>


    </header>


    <div
      class="fd-dynamic-page__content fd-dynamic-page__content--sm"
    >


      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="fuCwV554"
        role="tabpanel"
      >

                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
                    eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
                    dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

      </div>


      <div
        aria-expanded="true"
        class="fd-tabs__panel"
        id="AiWfz169"
        role="tabpanel"
      >


        <h2
          class="fd-title fd-title--h6 fd-title--wrap"
        >
          <b>
            This is an example of a summary line, without the expand/collapse feature.
          </b>
        </h2>


        <br />

                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                    Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                    in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.

      </div>


    </div>


    <footer
      class="fd-bar fd-bar--floating-footer"
      style="position:relative"
    >


      <div
        aria-label="Finalizing actions"
        class="fd-bar__right"
        role="toolbar"
      >


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>


        </div>


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>


        </div>


      </div>


    </footer>


  </section>


</div>
`;

exports[`Storyshots Layouts/Dynamic Page Tablet 1`] = `
<section>


  <section
    aria-label="Dynamic Page Tablet Example"
    class="fd-dynamic-page"
  >


    <header
      class="fd-dynamic-page__header"
    >


      <div
        class="fd-dynamic-page__title-area fd-dynamic-page__title-area--md"
        tabindex="0"
      >


        <div
          class="fd-dynamic-page__main-container"
        >


          <div
            class="fd-dynamic-page__breadcrumb-title-container"
          >


            <nav
              aria-label="Breadcrumbs"
            >


              <ul
                class="fd-dynamic-page__breadcrumb fd-breadcrumb"
              >


                <li
                  class="fd-breadcrumb__item"
                >
                  <a
                    class="fd-breadcrumb__link"
                    href="#"
                    tabindex="0"
                  >
                    Men
                  </a>
                </li>


                <li
                  class="fd-breadcrumb__item"
                >
                  <a
                    class="fd-breadcrumb__link"
                    href="#"
                    tabindex="0"
                  >
                    Shoes
                  </a>
                </li>


                <li
                  class="fd-breadcrumb__item"
                >
                  <a
                    aria-current="page"
                    class="fd-breadcrumb__link"
                    href="#"
                    tabindex="0"
                  >
                    Running Shoes
                  </a>
                </li>


              </ul>


            </nav>


            <div
              class="fd-dynamic-page__title-container"
            >


              <h1
                class="fd-title fd-dynamic-page__title fd-dynamic-page__title--md"
              >


                <a
                  class="fd-link"
                  href="#"
                  tabindex="0"
                  title="Balenciaga Triple S Trainers"
                >
                  Balenciaga Triple S Trainers
                </a>


              </h1>


              <div
                class="fd-dynamic-page__title-content"
                title="Some RANDOM things"
              >
                 Some RANDOM things
              </div>


            </div>


          </div>


          <div
            class="fd-dynamic-page__actions-container fd-dynamic-page__actions-container--md"
          >


            <div
              class="fd-dynamic-page__toolbar-container"
            >


              <div
                aria-label="Product actions"
                class="fd-dynamic-page__toolbar fd-dynamic-page__toolbar--md fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <button
                  class="fd-button fd-button--compact fd-button--positive"
                >
                  Accept
                </button>


                <button
                  class="fd-button fd-button--compact fd-button--reject"
                >
                  Reject
                </button>


              </div>


              <div
                aria-label="Navigation actions"
                class="fd-dynamic-page__toolbar-actions fd-dynamic-page__toolbar-actions--md fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
                role="toolbar"
              >


                <button
                  aria-label="Resize"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--resize"
                  />


                </button>


                <button
                  aria-label="Exit fullscreen"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--exitfullscreen"
                  />


                </button>


                <button
                  aria-label="Close"
                  class="fd-button fd-button--transparent"
                >


                  <i
                    class="sap-icon--decline"
                  />


                </button>


              </div>


            </div>


          </div>


        </div>


        <div
          class="fd-dynamic-page__subtitle"
        >
           Oversized multimaterial sneakers with quilted effect
        </div>


      </div>



      <div
        class="fd-dynamic-page__collapsible-header-container"
      >


        <div
          aria-hidden="false"
          aria-label="Tablet header"
          class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--md"
          id="fddplhvc5"
          role="region"
        >

                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                    delectus necessitatibus incidunt numquam asperiores tenetur iure.
                    Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

        </div>


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container fd-dynamic-page__collapsible-header-visibility-container--no-shadow"
        >


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
          />


          <div
            aria-label="Header actions"
            class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
            role="toolbar"
          >


            <button
              aria-controls="fddplhvc5"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="See More"
              class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
            >


              <i
                class="sap-icon--slim-arrow-up"
              />


            </button>


            <button
              aria-label="Pin this"
              class="fd-dynamic-page__pin-button fd-button fd-button--compact"
            >


              <i
                class="sap-icon--pushpin-off"
              />


            </button>


          </div>


          <div
            class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
          />


        </div>


      </div>


      <div
        class="fd-dynamic-page__tabs--overflow"
      >


        <ul
          class="fd-tabs fd-tabs--l fd-dynamic-page__tabs fd-dynamic-page__tabs--md fd-dynamic-page__tabs--add-shadow"
          role="tablist"
        >


          <li
            aria-controls="fuCwV551"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                Link

              </span>


            </button>


          </li>


          <li
            aria-controls="AiWfz166"
            aria-selected="true"
            class="fd-tabs__item"
            role="tab"
          >


            <button
              class="fd-tabs__link"
            >


              <span
                class="fd-tabs__tag"
              >

                                Selected

              </span>


            </button>


          </li>


        </ul>


      </div>


    </header>


    <div
      class="fd-dynamic-page__content fd-dynamic-page__content--md"
    >


      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="fuCwV551"
        role="tabpanel"
      >

                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
                eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
                dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

      </div>


      <div
        aria-expanded="true"
        class="fd-tabs__panel"
        id="AiWfz166"
        role="tabpanel"
      >

                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.
                Dolor sit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius assumenda, quidem natus optio repudiandae deleniti
                in atque quis, sed cum asperiores minus rerum incidunt unde quod fuga amet ea reprehenderit.

      </div>


    </div>


    <footer
      class="fd-bar fd-bar--floating-footer"
      style="position:relative"
    >


      <div
        aria-label="Finalizing actions"
        class="fd-bar__right"
        role="toolbar"
      >


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--emphasized fd-button--compact"
          >
            Save
          </button>


        </div>


        <div
          class="fd-bar__element"
        >


          <button
            aria-label="button"
            class="fd-button fd-button--transparent fd-button--compact"
          >
            Cancel
          </button>


        </div>


      </div>


    </footer>


  </section>


  <br />
  <br />


</section>
`;

exports[`Storyshots Layouts/Dynamic Page Without pin 1`] = `
<section
  aria-label="Dynamic Page Pinnable Example"
  class="fd-dynamic-page"
>


  <header
    class="fd-dynamic-page__header"
  >


    <div
      class="fd-dynamic-page__title-area fd-dynamic-page__title-area--xl"
      tabindex="0"
    >


      <div
        class="fd-dynamic-page__main-container"
      >


        <div
          class="fd-dynamic-page__breadcrumb-title-container"
        >


          <nav
            aria-label="Breadcrumbs"
          >


            <ul
              class="fd-dynamic-page__breadcrumb fd-breadcrumb"
            >


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Men
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Shoes
                </a>
              </li>


              <li
                class="fd-breadcrumb__item"
              >
                <a
                  aria-current="page"
                  class="fd-breadcrumb__link"
                  href="#"
                  tabindex="0"
                >
                  Running Shoes
                </a>
              </li>


            </ul>


          </nav>


          <div
            class="fd-dynamic-page__title-container"
          >


            <h1
              class="fd-title fd-dynamic-page__title"
              title="Balenciaga Triple S Trainers"
            >
               Balenciaga Triple S Trainers
            </h1>


            <div
              class="fd-dynamic-page__title-content"
              title="The header can only be expanded/collapsed, not pinned"
            >
               The header can only be expanded/collapsed, not pinned.
            </div>


          </div>


        </div>


        <div
          class="fd-dynamic-page__actions-container"
        >


          <div
            class="fd-dynamic-page__toolbar-container"
          >


            <div
              aria-label="Product actions"
              class="fd-dynamic-page__toolbar fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
              role="toolbar"
            >


              <button
                class="fd-button fd-button--compact fd-button--positive"
              >
                Accept
              </button>


              <button
                class="fd-button fd-button--compact fd-button--reject"
              >
                Reject
              </button>


              <span
                class="fd-toolbar__separator"
              />


            </div>


            <div
              aria-label="Navigation actions"
              class="fd-dynamic-page__toolbar-actions fd-toolbar fd-toolbar--clear fd-toolbar--transparent"
              role="toolbar"
            >


              <button
                aria-label="Resize"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--resize"
                />


              </button>


              <button
                aria-label="Exit fullscreen"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--exitfullscreen"
                />


              </button>


              <button
                aria-label="Close"
                class="fd-button fd-button--transparent"
              >


                <i
                  class="sap-icon--decline"
                />


              </button>


            </div>


          </div>


        </div>


      </div>


      <div
        class="fd-dynamic-page__subtitle"
      >
         Oversized multimaterial sneakers with quilted effect
      </div>


    </div>


    <div
      class="fd-dynamic-page__collapsible-header-container"
    >


      <div
        aria-hidden="false"
        aria-label="Pinned header"
        class="fd-dynamic-page__collapsible-header fd-dynamic-page__collapsible-header--xl"
        id="fddplhvc3"
        role="region"
      >

                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam possimus corrupti architecto perspiciatis,
                    delectus necessitatibus incidunt numquam asperiores tenetur iure.
                    Cum consequuntur impedit repellendus esse, facere autem optio consequatur nobis?

      </div>


      <div
        class="fd-dynamic-page__collapsible-header-visibility-container"
      >


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--left-gradient"
        />


        <div
          aria-label="Header actions"
          class="fd-dynamic-page__collapsible-header-visibility-container--button-group"
          role="toolbar"
        >


          <button
            aria-controls="fddplhvc3"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="See More"
            class="fd-dynamic-page__collapse-button fd-button fd-button--compact"
          >


            <i
              class="sap-icon--slim-arrow-up"
            />


          </button>


        </div>


        <div
          class="fd-dynamic-page__collapsible-header-visibility-container--right-gradient"
        />


      </div>


    </div>


  </header>


  <div
    class="fd-dynamic-page__content fd-dynamic-page__content--xl"
  >

            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam
            eum tempore aliquid dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum illo voluptatem, unde voluptate aliquam eum tempore aliquid
            dolorem cumque ullam perspiciatis omnis et asperiores dolores, consequatur, suscipit sint animi amet?

  </div>


</section>
`;
